--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <table cellspacing="30"> 
         <tr>
             <td>
-                <img src="C:\Users\hp\hello\WEB_DEV\WhatsApp Image 2022-06-08 at 12.47.05 PM (1)-modified (1).png" alt="Tanishka's profile image">
+                <img src="CV/WhatsApp Image 2022-06-08 at 12.47.05 PM (1)-modified (1).png" alt="Tanishka's profile image">
             </td>
                 
             <td>
